// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match snapshot with no params 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh hlFGce"
  />
</DocumentFragment>
`;

exports[`match snapshot with params 1`] = `
<DocumentFragment>
  <div
    class="sc-bdnyFh dcNyyW"
    lg="4"
    md="3"
    sm="2"
    xl="5"
  />
</DocumentFragment>
`;
